[project]
name = "chatbot-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Javeriabintearshad@gmail.com", email = "javeriabintearshad@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
]

[project.scripts]
chatbot-chainlit = "chatbot_chainlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
